<resources>
    <string name="pref_disable_account">Disable</string>
    <string name="pref_tunnel">Tunnel</string>
    <string name="pref_tunnel_host">Hostname</string>
    <string name="pref_tunnel_port">Port</string>
    <string name="pref_tunnel_mode">Mode</string>
    <string-array name="tunnel_mode_entries">
        <item>disabled</item>
        <item>3G only</item>
        <item>always</item>
        <item>auto</item>
    </string-array>
    <string name="incall_notif_active">Audio call ongoing</string>
    <string name="incall_notif_paused">Paused call ongoing</string>
    <string name="incall_notif_video">Video capturing call ongoing</string>
    <string name="not_ready_to_make_new_call">Not ready for a new call</string>
    <string name="bad_target_uri">Bad contact : %s</string>
    <string name="reset_sas_fmt">Reset verified %s</string>
    <string name="verify_sas_fmt">Verify %s</string>
    <string name="communication_encrypted">Encrypted</string>
    <string name="waiting_for_startup">Starting up…</string>
    <string name="couldnt_accept_call">An error occurred while accepting call</string>
    <string name="error_adding_new_call">Error adding new call</string>
    <string name="transfer_started">Transfer initiated</string>
    <string name="transfer_dialog_title">Transfer call to</string>
    <string name="transfer_to_new_call">New call</string>
    <string name="resume_dialog_title">Resume call</string>
    <string name="cannot_resume_paused_by_remote_call">Cannot resume call paused by remote</string>
    <string name="conf_show_details_text">Show details</string>
    <string name="skipable_error_service_not_ready">Warning: service is not ready</string>
    <string name="close_button_text">Close</string>
    <string name="status_conf_call">conf</string>
    <string name="status_active_call">active</string>
    <string name="state_paused">paused</string>
    <string name="state_paused_by_remote">paused by remote</string>
    <string name="state_streams_running"></string>
    <string name="state_incoming_received">incoming</string>
    <string name="state_outgoing_ringing">ringing</string>
    <string name="state_outgoing_progress">calling</string>
    <string name="mutemic_button_txt">Mute</string>
    <string name="speaker_button_txt">Speaker</string>
    <string name="bluetooth_button_txt">Bluetooth</string>
    <string name="CancelButtonText">Cancel</string>
    <string name="AddCallButtonText">Add call</string>
    <string name="TransferCallButtonText">Transfer call</string>
    <string name="conf_admin_choice_enter">Enter conference</string>
    <string name="conf_admin_choice_leave">Momentarily leave conference</string>
    <string name="conf_admin_choice_terminate">Terminate conference</string>
    <string name="hangup">Hang up</string>
    <string name="conf_simple_merge_bt_txt">Merge</string>
    <string name="conf_simple_transfer_bt_txt">Transfer</string>
    <string name="conf_simple_video_bt_txt">video</string>
    <string name="user_not_available">User is Temporarily Unavailable</string>
    <string name="dial_valid_number">Please dial Valid Number</string>
    <string name="show_send_dtmfs_button">Dialpad</string>
    <string name="conf_conference">Conference</string>
    <string name="in_conf">You are part of it</string>
    <string name="in_conf_leave">Go out</string>
    <string name="out_conf">You are out of it</string>
    <string name="out_conf_enter">Go in</string>
    <string name="pref_audio_hacks_title">Audio hacks</string>
    <string name="pref_audio_use_specific_mode_title">Use specific mode hack</string>
    <string name="pref_audio_use_specific_mode_summary">0=MODE_NORMAL (default), 2=MODE_IN_CALL</string>
    <string name="pref_audio_hacks_use_routing_api_title">Use routing API hack</string>
    <string name="pref_audio_hacks_use_galaxys_hack_title">Use Galaxy S audio hack</string>
    <string name="pref_audio_soft_volume_title">Use software volume</string>
    <string name="pref_ipv6_title">Use ipv6 instead of ipv4</string>
    <string name="error_while_accepting_pending_call">Error while accepting pending call</string>
    <string name="incoming_call_dialog_title">%s is calling you</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="login">LOGIN</string>
    <string name="unknown_incoming_call_name">Unknown</string>
    <string name="pref_network_title">Network</string>
    <string name="pref_transport">Transport</string>
    <string name="pref_transport_udp">UDP</string>
    <string name="pref_transport_tcp">TCP</string>
    <string name="pref_transport_tls">TLS</string>
    <string name="pref_transport_use_random_ports">Use random ports</string>
    <string name="pref_sip_port_title">SIP port to use</string>
    <string name="at_least_a_protocol">At least one item is required</string>
    <string name="first_launch_ok">Registration successful</string>
    <string name="error">Error</string>
    <string name="click_to_show_first_login_view">Start</string>
    <string name="dialer_null_on_new_intent">Application not ready</string>
    <string name="pref_add_account">Add account</string>
    <string name="no_phone_numbers">No phone numbers found for %s</string>
    <string name="filter_contacts">Filter contacts</string>
    <string name="title_numbers_dialog">%s\'s phone numbers</string>
    <string name="pref_delete_account">Delete this account</string>
    <string name="pref_default_account">Use as default</string>
    <string name="pref_echo_canceller_calibration">Echo canceller calibration</string>
    <string name="pref_video_use_front_camera_title">Use front camera</string>
    <string name="pref_video">Video</string>
    <string name="pref_preferences">PREFERENCES</string>
    <string name="pref_video_codecs_title">CODECS</string>
    <string name="pref_preferred_video_size">Preferred video size</string>
    <string name="menu_videocall_back_to_dialer_title">Display dialer</string>
    <string name="menu_videocall_switch_camera_title">Front/Rear Camera</string>
    <string name="menu_videocall_change_resolution_when_low_resolution">Try High resolution</string>
    <string name="menu_videocall_change_resolution_when_high_resolution">Low resolution</string>
    <string name="menu_videocall_change_resolution_title">Change resolution</string>
    <string name="menu_videocall_toggle_camera_title">Mute/Unmute camera</string>
    <string name="menu_videocall_toggle_camera_disable">Disable camera</string>
    <string name="menu_videocall_toggle_camera_enable">Enable camera</string>
    <string name="menu_videocall_terminate_call_title">Terminate call</string>
    <string name="pref_video_settings_title">Video settings</string>
    <string name="pref_video_automatically_share_my_video_title">Share my camera</string>
    <string name="pref_video_automatically_accept_video_title">Accept incoming video requests</string>
    <string name="pref_video_automatically_share_my_video">Automatically send my camera</string>
    <string name="pref_video_automatically_accept_video">Always accept video requests</string>
    <string name="pref_video_initiate_call_with_video_title">Initiate video calls</string>
    <string name="pref_video_initiate_call_with_video">Always send video requests</string>
    <string name="pref_video_enable_title">Enable Video</string>
    <string name="pref_animation_enable_title">Enable Animations</string>
    <string name="pref_escape_plus">Replace + by 00</string>
    <string name="pref_ilbc_summary">iLBC might be unavailable depending on ARM processor and Android OS version.</string>
    <string name="pref_echo_cancellation">Echo cancellation</string>
    <string name="pref_autostart">Start at boot time</string>
    <string name="pref_enable_outbound_proxy">Outbound proxy</string>
    <string name="pref_codecs">CODECS</string>
    <string name="pref_communication_expire_title">Communication timeout</string>
    <string name="pref_incoming_expire_title">Incoming call timeout</string>
    <string name="pref_video_port_title">Video port or port range</string>
    <string name="pref_audio_port_title">Audio port or port range</string>
    <string name="pref_video_port_description">Video port or port range (minport-maxport)</string>
    <string name="pref_audio_port_description">Audio port or port range (minport-maxport)</string>
    <string name="pref_incoming_call_timeout_title">Incoming call timeout (in seconds)</string>
    <string name="place_call_chooser">Place a call</string>
    <string name="pref_adaptive_rate_control">Adaptive rate control</string>
    <string name="pref_adaptive_rate_algorithm">Adaptive rate algorithm</string>
    <string name="pref_codec_bitrate_limit">Codec bitrate limit</string>
    <string-array name="limit_bitrate_entries">
        <item>10 kbits/s</item>
        <item>15 kbits/s</item>
        <item>20 kbits/s</item>
        <item>36 kbits/s</item>
        <item>64 kbits/s</item>
        <item>128 kbits/s</item>
    </string-array>
    <string name="menu_account_settings">Sip Accounts</string>
    <string name="pref_prefix">Prefix</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_proxy">Proxy</string>
    <string name="pref_domain">Domain*</string>
    <string name="pref_passwd">Password*</string>
    <string name="pref_username">Username*</string>
    <string name="pref_sipaccount">SIP ACCOUNT</string>
    <string name="pref_help_proxy">SIP proxy hostname or ip address (optional)</string>
    <string name="pref_help_outbound_proxy">Route all calls through SIP proxy</string>
    <string name="pref_help_username">Example: john if your account is john@sip.example.org</string>
    <string name="pref_help_domain">sip.example.org if your account is john@sip.example.org</string>
    <string name="pref_help_password">You have to re-enter your password if you edit your username and/or the domain</string>
    <string name="no_call_history">No call in your history.</string>
    <string name="no_missed_call_history">No missed call in your history.</string>
    <string name="no_contact">No contact in your address book.</string>
    <string name="no_sip_contact">No SIP contact in your address book.</string>
    <string name="content_description_edit">Edit button</string>
    <string name="content_description_validate">Validate button</string>
    <string name="content_description_all_contacts">All contacts</string>
    <string name="content_description_cancel">Cancel</string>
    <string name="pref_expire_title">Expire</string>
    <string name="pref_avpf">AVPF</string>
    <string name="pref_avpf_rr_interval"> AVPF regular RTCP interval in seconds (between 1 and 5)</string>
    <string name="pref_auth_userid">Auth userid</string>
    <string name="pref_help_auth_userid">Enter authentication userid (optional)</string>
    <string name="pref_display_name">Display name</string>
    <string name="pref_help_display_name">Enter display name (optional)</string>
    <string name="pref_manage">Manage</string>
    <string name="contact_list">Contacts</string>
    <string name="call_history">History</string>
    <string name="search">Search</string>
    <string name="numpad_1"><font size="42">1</font></string>
    <string name="numpad_2"><font size="42">2</font></string>
    <string name="numpad_3"><font size="42">3</font></string>
    <string name="numpad_4"><font size="42">4</font></string>
    <string name="numpad_5"><font size="42">5</font></string>
    <string name="numpad_6"><font size="42">6</font></string>
    <string name="numpad_7"><font size="42">7</font></string>
    <string name="numpad_8"><font size="42">8</font></string>
    <string name="numpad_9"><font size="42">9</font></string>
    <string name="numpad_0"><font size="42">0</font></string>
    <string name="star"><font size="42">*</font></string>
    <string name="hash"><font size="42">#</font></string>
</resources>