<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<Preference
		android:key="@string/menu_title_key"
		android:title="@string/menu_account_settings"
		android:layout="@layout/preference_header_layout"/>

    <PreferenceCategory
        android:title="@string/pref_sipaccount"
		android:key="@string/pref_sipaccount_key"
		android:layout="@layout/preference_category_layout">
        
        <EditTextPreference 
        	android:title="@string/pref_username"
        	android:dialogMessage="@string/pref_help_username"
            android:persistent="true"
			android:layout="@layout/preference_screen_layout_with_summary"/>
        
        <EditTextPreference 
        	android:title="@string/pref_auth_userid"
        	android:dialogMessage="@string/pref_help_auth_userid"
            android:persistent="true"
			android:layout="@layout/preference_screen_layout_without_summary"/>
        
        <EditTextPreference 
        	android:title="@string/pref_passwd"
        	android:dialogMessage="@string/pref_help_password"
            android:persistent="true"
			android:layout="@layout/preference_screen_layout_without_summary_with_divider"/>
        
        <EditTextPreference 
        	android:title="@string/pref_domain"
        	android:dialogMessage="@string/pref_help_domain"
			android:selectable="false"
            android:persistent="true"
			android:layout="@layout/preference_screen_layout_with_summary_without_forward"/>
        
        <EditTextPreference 
        	android:title="@string/pref_display_name"
        	android:dialogMessage="@string/pref_help_display_name"
			android:selectable="false"
            android:persistent="true"
			android:layout="@layout/preference_screen_layout_with_summary_without_forward"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory
    	android:title="@string/pref_advanced"
		android:key="@string/pref_advanced_key"
		android:layout="@layout/preference_category_layout">
        
		<ListPreference 
		    android:title="@string/pref_transport"
			android:selectable="false"
			android:key="@string/pref_transport_key"
			android:layout="@layout/preference_screen_layout_with_summary_without_forward"/>
        
        <EditTextPreference
        	android:title="@string/pref_proxy"
        	android:summary="@string/pref_help_proxy"
			android:layout="@layout/preference_screen_layout_with_summary_without_forward"
			android:selectable="false"
            android:persistent="true"/>
        
        <CheckBoxPreference
        	android:title="@string/pref_enable_outbound_proxy"
        	android:dialogMessage="@string/pref_help_outbound_proxy"
        	android:summary="@string/pref_help_outbound_proxy"
            android:persistent="true"/>
			 
		<EditTextPreference 
			android:title="@string/pref_expire_title"
			android:layout="@layout/preference_screen_layout_with_summary_without_forward"
			android:key="@string/pref_expire_key"
			android:selectable="false"
		  	android:numeric="integer" />
		
		<EditTextPreference 
		    android:title="@string/pref_prefix"
			android:key="@string/pref_prefix_key"/>

		<CheckBoxPreference
			android:title="@string/pref_avpf"
			android:key="@string/pref_avpf_key"/>

		<EditTextPreference
			android:title="@string/pref_avpf_rr_interval"
			android:key="@string/pref_avpf_rr_interval_key"
			android:numeric="integer"/>

		<CheckBoxPreference 
			android:title="@string/pref_escape_plus"
		    android:key="@string/pref_escape_plus_key"/>
        
    </PreferenceCategory>
    
	<PreferenceCategory
       	android:title="@string/pref_manage"
		android:key="@string/pref_manage_key"
		android:layout="@layout/preference_category_layout">
       
        <CheckBoxPreference
        	android:title="@string/pref_disable_account"
            android:persistent="true"/>
        
        <CheckBoxPreference
        	android:title="@string/pref_default_account"
            android:persistent="true"/>
        
        <Preference 
        	android:title="@string/pref_delete_account"
            android:persistent="true"/>
        
    </PreferenceCategory>
    
</PreferenceScreen>