<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/numpad_top_bottom_margin"
    android:paddingBottom="@dimen/numpad_top_bottom_margin"
    android:paddingLeft="@dimen/numpad_all_margin"
    android:paddingRight="@dimen/numpad_all_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <org.linphone.ui.Digit
            android:id="@+id/Digit1"
            style="@style/DialerDigit"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/numpad_1"
            android:textColor="@color/colorPrimary"
            app:cb_color="@color/white"
            app:cb_pressedRingWidth="8dip" />

        <org.linphone.ui.Digit
            android:id="@+id/Digit2"
            style="@style/DialerDigit"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/numpad_2"
            android:textColor="@color/colorPrimary"
            app:cb_color="@color/white"
            app:cb_pressedRingWidth="8dip" />

        <org.linphone.ui.Digit
            android:id="@+id/Digit3"
            style="@style/DialerDigit"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/numpad_3"
            android:textColor="@color/colorPrimary"
            app:cb_color="@color/white"
            app:cb_pressedRingWidth="8dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <org.linphone.ui.Digit
            android:id="@+id/Digit4"
            style="@style/DialerDigit"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/numpad_4"
            android:textColor="@color/colorPrimary"
            app:cb_color="@color/white"
            app:cb_pressedRingWidth="8dip" />

        <org.linphone.ui.Digit
            android:id="@+id/Digit5"
            style="@style/DialerDigit"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/numpad_5"
            android:textColor="@color/colorPrimary"
            app:cb_color="@color/white"
            app:cb_pressedRingWidth="8dip" />

        <org.linphone.ui.Digit
            android:id="@+id/Digit6"
            style="@style/DialerDigit"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/numpad_6"
            android:textColor="@color/colorPrimary"
            app:cb_color="@color/white"
            app:cb_pressedRingWidth="8dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <org.linphone.ui.Digit
            android:id="@+id/Digit7"
            style="@style/DialerDigit"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/numpad_7"
            android:textColor="@color/colorPrimary"
            app:cb_color="@color/white"
            app:cb_pressedRingWidth="8dip" />

        <org.linphone.ui.Digit
            android:id="@+id/Digit8"
            style="@style/DialerDigit"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/numpad_8"
            android:textColor="@color/colorPrimary"
            app:cb_color="@color/white"
            app:cb_pressedRingWidth="8dip" />

        <org.linphone.ui.Digit
            android:id="@+id/Digit9"
            style="@style/DialerDigit"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/numpad_9"
            android:textColor="@color/colorPrimary"
            app:cb_color="@color/white"
            app:cb_pressedRingWidth="8dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <org.linphone.ui.Digit
            android:id="@+id/DigitStar"
            style="@style/DialerDigit"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/star"
            android:textColor="@color/colorPrimary"
            app:cb_color="@color/white"
            app:cb_pressedRingWidth="8dip" />

        <org.linphone.ui.Digit
            android:id="@+id/Digit00"
            style="@style/DialerDigit"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/numpad_0"
            android:textColor="@color/colorPrimary"
            app:cb_color="@color/white"
            app:cb_pressedRingWidth="8dip" />

        <org.linphone.ui.Digit
            android:id="@+id/DigitHash"
            style="@style/DialerDigit"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/hash"
            android:textColor="@color/colorPrimary"
            app:cb_color="@color/white"
            app:cb_pressedRingWidth="8dip" />
    </LinearLayout>
</LinearLayout>

    <!--

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <TableRow android:layout_weight="1">

        <org.linphone.ui.Digit
            android:id="@+id/Digit1"
            android:text="1"
            style="@style/DialerDigit"
            android:background="@drawable/numpad_one"
            android:soundEffectsEnabled="true" />

        <org.linphone.ui.Digit
            android:id="@+id/Digit2"
            android:text="2"
            style="@style/DialerDigit"
            android:background="@drawable/numpad_two"
            android:soundEffectsEnabled="true" />

        <org.linphone.ui.Digit
            android:id="@+id/Digit3"
            android:text="3"
            style="@style/DialerDigit"
            android:background="@drawable/numpad_three"
            android:soundEffectsEnabled="true" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <org.linphone.ui.Digit
            android:id="@+id/Digit4"
            android:text="4"
            style="@style/DialerDigit"
            android:background="@drawable/numpad_four"
            android:soundEffectsEnabled="true" />

        <org.linphone.ui.Digit
            android:id="@+id/Digit5"
            android:text="5"
            style="@style/DialerDigit"
            android:background="@drawable/numpad_five"
            android:soundEffectsEnabled="true" />

        <org.linphone.ui.Digit
            android:id="@+id/Digit6"
            android:text="6"
            style="@style/DialerDigit"
            android:background="@drawable/numpad_six"
            android:soundEffectsEnabled="true" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <org.linphone.ui.Digit
            android:id="@+id/Digit7"
            android:text="7"
            style="@style/DialerDigit"
            android:background="@drawable/numpad_seven"
            android:soundEffectsEnabled="true" />

        <org.linphone.ui.Digit
            android:id="@+id/Digit8"
            android:text="8"
            style="@style/DialerDigit"
            android:background="@drawable/numpad_eight"
            android:soundEffectsEnabled="true" />

        <org.linphone.ui.Digit
            android:id="@+id/Digit9"
            android:text="9"
            style="@style/DialerDigit"
            android:background="@drawable/numpad_nine"
            android:soundEffectsEnabled="true" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <org.linphone.ui.Digit
            android:id="@+id/DigitStar"
            android:text="*"
            style="@style/DialerDigit"
            android:background="@drawable/numpad_star"
            android:soundEffectsEnabled="true" />

        <org.linphone.ui.Digit
            android:id="@+id/Digit00"
            android:text="0+"
            style="@style/DialerDigit"
            android:background="@drawable/numpad_zero"
            android:soundEffectsEnabled="true" />

        <org.linphone.ui.Digit
            android:id="@+id/DigitHash"
            android:text="#"
            style="@style/DialerDigit"
            android:background="@drawable/numpad_sharp"
            android:soundEffectsEnabled="true" />
    </TableRow>

    </TableLayout> --> <!-- android:layout_width="fill_parent" android:layout_height="fill_parent" android:textColor="@android:color/black" android:background="@drawable/clavier_bg" android:textStyle="bold" android:textSize="20sp" android:layout_weight="1" -->
        